--- a/site.html
+++ b/site.html
@@ -9,14 +9,33 @@
 </head>
 <body>
  <header>
-    <div><img src="imagem/fav.png" alt="eu" width="200px">
-<p>dfsfsf</p>
+    <img src="imagem/fav.png" alt="eu" width="200px">
+    <div>
+        <h1>João Vitor Coelho Machado</h1>
+        <p><img id="icone" src="imagem/computador.png" alt="computador">ADS - Analise e Desenvolvimento de Sistemas</p>
+        <p><img id="icone" src="imagem/JS.png" alt="JS">Java Script</p>
+        <p><img id="icone" src="imagem/Html.png" alt="Html">Html</p>
+        <p><img id="icone" src="imagem/CSS.png" alt="CSS">CSS</p>
+    </div>
  </header>  
 <section>
-fafs
+    <div id="conteudo">
+        <h2>Explorando HTML e CSS: Testes e Aprendizado.</h2>
+        <p>Está é uma pagina de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
+            <div id="redes">
+                <p><img id="icone" src="imagem/github.png" alt="Github">Github</p>
+                <p><img id="icone" src="imagem/linkedin.png" alt="LinkedIn">LinkedIn</p>
+                <p><img id="icone" src="imagem/whatsapp.png" alt="Whatsapp">Whatsapp</p>
+                <p><img id="icone" src="imagem/email.png" alt="E-mail">E-mail</p>
+                <p><img id="icone" src="imagem/instagram.png" alt="Instagram">Instagram</p>
+                <p><img id="icone" src="imagem/x.png" alt="Twitter">Twitter</p>
+                <p><img id="icone" src="imagem/tiktok.png" alt="Tiktok">Tiktok</p>
+                <p><img id="icone" src="imagem/discord.png" alt="Discord">Discord</p>
+            </div>
+    </div>
  </section> 
  <footer>
-asf
+<p>Site feito para treinar o conhecimento.</p>
  </footer>
 </body>
 </html>
