--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
         <p>Está é uma pagina de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
         <div id="ifra"><iframe src="curriculo.html"></iframe></div>
             <div id="redes">
-                <p><img id="icone" src="imagem/github.png" alt="Github"><a href="https://github.com/Torrvi" target="_blank">Github</a></p>
-                <p><img id="icone" src="imagem/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-coelho-machado/" target="_blank">LinkedIn</a></p>
-                <p><img id="icone" src="imagem/whatsapp.png" alt="Whatsapp"><a href="https://wa.me/5548984076372" target="_blank">Whatsapp</a></p>
-                <p><img id="icone" src="imagem/email.png" alt="E-mail"><a href="mailto:coelhozz24@gmail.com" target="_blank">E-mail</a></p>
-                <p><img id="icone" src="imagem/instagram.png" alt="Instagram"><a href="https://www.instagram.com/o.coellho?igsh=MWg4NnlsOHc4czllMw%3D%3D&utm_source=qr " target="_blank">Instagram</a></p>
-                <p><img id="icone" src="imagem/x.png" alt="Twitter"><a href="https://x.com/joao_coe1ho?s=21&t=JgBa8kCHPmERXPqKQo7Q4g" target="_blank">Twitter</a></p>
-                <p><img id="icone" src="imagem/tiktok.png" alt="Tiktok"><a href="https://www.tiktok.com/@coelho_personal?_t=ZM-8u7xYn1mN0w&_r=1" target="_blank">Tiktok</a></p>
-                <p><img id="icone" src="imagem/discord.png" alt="Discord"><a href="https://discord.com/" target="_blank">Discord</a></p>
+                <ol>
+                <li><p><img id="icone" src="imagem/github.png" alt="Github"><a href="https://github.com/Torrvi" target="_blank">Github</a></p></li>
+                <li><p><img id="icone" src="imagem/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-coelho-machado/" target="_blank">LinkedIn</a></p>
+                <li><p><img id="icone" src="imagem/whatsapp.png" alt="Whatsapp"><a href="https://wa.me/5548984076372" target="_blank">Whatsapp</a></p></li>
+                <li><p><img id="icone" src="imagem/email.png" alt="E-mail"><a href="mailto:coelhozz24@gmail.com" target="_blank">E-mail</a></p></li>
+                <li><p><img id="icone" src="imagem/instagram.png" alt="Instagram"><a href="https://www.instagram.com/o.coellho?igsh=MWg4NnlsOHc4czllMw%3D%3D&utm_source=qr " target="_blank">Instagram</a></p></li>
+                <li><p><img id="icone" src="imagem/x.png" alt="Twitter"><a href="https://x.com/joao_coe1ho?s=21&t=JgBa8kCHPmERXPqKQo7Q4g" target="_blank">Twitter</a></p></li>
+                <li><p><img id="icone" src="imagem/tiktok.png" alt="Tiktok"><a href="https://www.tiktok.com/@coelho_personal?_t=ZM-8u7xYn1mN0w&_r=1" target="_blank">Tiktok</a></p></li>
+                <li><p><img id="icone" src="imagem/discord.png" alt="Discord"><a href="https://discord.com/" target="_blank">Discord</a></p></li>
+            </ol>
             </div>
     </div>
  </section> 
