--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
  <header>
     <img src="imagem/fav.png" alt="eu" width="200px">
     <div>
-        <h1>João Vitor Coelho Machado</h1>
+        <h1 id="completo">João Vitor Coelho Machado</h1>
+        <h1 id="medio">João Vitor Coelho</h1>
+        <h1 id="reduzido">João Vitor</h1>
         <p><img id="iconeh" src="imagem/computador.png" alt="computador">ADS - Analise e Desenvolvimento de Sistemas</p>
         <p><img id="iconeh" src="imagem/JS.png" alt="JS">Java Script</p>
         <p><img id="iconeh" src="imagem/Html.png" alt="Html">Html</p>
@@ -23,6 +25,7 @@
         <h2>Explorando HTML e CSS: Testes e Aprendizado.</h2>
         <p>Acabo de finzalizar o curso das respectivas ferramentas e Java Script e daqui pra frente irei iniciar uma etapa de estudos sozinho e treinos em pagina teste</p>
         <p>Está é uma pagina de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
+        <h2>Redes Socias</h2>
         <div id="redes">
                 <p><img id="icone" src="imagem/github.png" alt="Github"><a href="https://github.com/Torrvi" target="_blank">Github</a></p>
                 <p><img id="icone" src="imagem/linkedin.png" alt="LinkedIn"><a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-coelho-machado/" target="_blank">LinkedIn</a></p>
@@ -32,6 +35,13 @@
                 <p><img id="icone" src="imagem/x.png" alt="Twitter"><a href="https://x.com/joao_coe1ho?s=21&t=JgBa8kCHPmERXPqKQo7Q4g" target="_blank">Twitter</a></p>
                 <p><img id="icone" src="imagem/tiktok.png" alt="Tiktok"><a href="https://www.tiktok.com/@coelho_personal?_t=ZM-8u7xYn1mN0w&_r=1" target="_blank">Tiktok</a></p>
                 <p><img id="icone" src="imagem/discord.png" alt="Discord"><a href="https://discord.com/" target="_blank">Discord</a></p>
+            </div>
+            <div id="conteudo">
+                <h2>Projetos Futuros</h2>
+                <p>Aprimorar habilidades em JavaScript: React, Vue.js, Node.js, APIs, APIs de terceiros, Projetos práticos.</p>
+                <p>Estudar Node.js e Backend: Express, MongoDB ou SQL, Autenticação e Autorização, Projetos de backend.</p>
+                <p>Estudo sobre Desenvolvimento Mobile (Opcional): React Native, PWA (Progressive Web Apps).</p>
+                <p>Aprender Python: Sintaxe básica, Django/Flask, Automação, Data Science, Machine Learning</p>
             </div>
     </div>
  </section> 
