--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
 </head>
 <body>
  <header>
-    <img src="imagem/fav.png" alt="eu" width="200px">
+    <img id="reduzido" src="imagem/fav.png" alt="eu" width="120px">
+    <img id="medio" src="imagem/fav.png" alt="eu" width="150px">
+    <img id="completo" src="imagem/fav.png" alt="eu" width="200px">
     <div>
         <h1 id="completo">João Vitor Coelho Machado</h1>
         <h1 id="medio">João Vitor Coelho</h1>
         <h1 id="reduzido">João Vitor</h1>
-        <p><img id="iconeh" src="imagem/computador.png" alt="computador">ADS - Analise e Desenvolvimento de Sistemas</p>
+        <p class="maior"><img id="iconeh" src="imagem/computador.png" alt="computador">ADS - Analise e Desenvolvimento de Sistemas</p>
         <p><img id="iconeh" src="imagem/JS.png" alt="JS">Java Script</p>
         <p><img id="iconeh" src="imagem/Html.png" alt="Html">Html</p>
         <p><img id="iconeh" src="imagem/CSS.png" alt="CSS">CSS</p>
+        <p class="menor"><img id="iconeh" src="imagem/computador.png" alt="computador">ADS</p>
     </div>
  </header>  
 <section>
