Final do projeto
Finalizei o teste de HTML e CSS

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 <body>
  <header>
-    <img id="reduzido" src="imagem/fav.png" alt="eu" width="120px">
-    <img id="medio" src="imagem/fav.png" alt="eu" width="150px">
-    <img id="completo" src="imagem/fav.png" alt="eu" width="200px">
+    <img id="perfil" src="imagem/fav.png" alt="eu" width="200px">
     <div>
         <h1 id="completo">João Vitor Coelho Machado</h1>
         <h1 id="medio">João Vitor Coelho</h1>
@@ -27,7 +25,7 @@
     <div id="conteudo">
         <h2>Explorando HTML e CSS: Testes e Aprendizado.</h2>
         <p>Acabo de finzalizar o curso das respectivas ferramentas e Java Script e daqui pra frente irei iniciar uma etapa de estudos sozinho e treinos em pagina teste</p>
-        <p>Está é uma pagina de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
+        <p>Está é uma página de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
         <h2>Redes Socias</h2>
         <div id="redes">
                 <p><img id="icone" src="imagem/github.png" alt="Github"><a href="https://github.com/Torrvi" target="_blank">Github</a></p>
