--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
                 <p><img id="icone" src="imagem/x.png" alt="Twitter"><a href="https://x.com/joao_coe1ho?s=21&t=JgBa8kCHPmERXPqKQo7Q4g" target="_blank">Twitter</a></p>
                 <p><img id="icone" src="imagem/tiktok.png" alt="Tiktok"><a href="https://www.tiktok.com/@coelho_personal?_t=ZM-8u7xYn1mN0w&_r=1" target="_blank">Tiktok</a></p>
                 <p><img id="icone" src="imagem/discord.png" alt="Discord"><a href="https://discord.com/" target="_blank">Discord</a></p>
-            </div>
+        </div>
             <div id="conteudo">
+                <h2>Projetos Atuais</h2>
+                <p>Aqui tem um breve resumo dos meus atuais projetos:<a href="portifolio.html" target="_blank">Portifolio</a></p>
                 <h2>Projetos Futuros</h2>
                 <p>Aprimorar habilidades em JavaScript: React, Vue.js, Node.js, APIs, APIs de terceiros, Projetos práticos.</p>
                 <p>Estudar Node.js e Backend: Express, MongoDB ou SQL, Autenticação e Autorização, Projetos de backend.</p>
