--- a/portifolio.html
+++ b/portifolio.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <header>
-        <h1>Meu Portifolio</h1>
+        <h1>Meu Portfólio</h1>
     </header>
     <section>
         <div id="conteudo">
-            <p>Com esta pagina busco apresentar um pouco dos sites que desenvolvi enquanto assistia o conteudo do <a href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a> em ordem cronologica e de aprendizagem.</p>
+            <h2>Aqui estão todos os projetos:</h2>
+            <p>Com esta página, busco apresentar um pouco dos sites que desenvolvi enquanto assistia o conteudo do <a id="curso" href="https://www.cursoemvideo.com/" target="_blank">Curso em video</a> em ordem cronologica e de aprendizagem.</p>
             <p>Esse foi o primeiro site, apenas uma forma de exercitar a formatação com CSS com informações vindas do site onde estava fazendo o curso:</p>
-            <p><a href="../Desafio/Desafio.html" target="_blank">Como surgiu o mascote do Android</a></p>
-            <p>Tiveram alguns outros projetos, porem o seguinte que teve relevancia foi o Cordel Moderno, onde implementava orientações ao background e novas formas de movimentar Objetos:</p>
-            <p><a href="../CordelModerno/Cordel.html" target="_blank">Cordel Moderno</a></p>
-            <p>Após isso tentei criar uma pagina de divulgação dos serviços que a minha mulher dipões em seus atendimentos como Fisioterapeuta, porem a minha ideia para o site era um pouco mais complexa e irei voltar a trabalhar nele futuramente:
-            <p><a href="../Dra.LeticiaV/index.html" target="_blank">Dra.Leticia Vieira</a></p>
+            <article><a href="../Desafio/Desafio.html" target="_blank">Como surgiu o mascote do Android</a></article>
+            <p>Tiveram alguns outros projetos, porém o seguinte que teve relevancia foi o Cordel Moderno, onde implementava orientações ao background e novas formas de movimentar Objetos:</p>
+            <article><a href="../CordelModerno/Cordel.html" target="_blank">Cordel Moderno</a></article>
+            <p>Após isso tentei criar uma pagina de divulgação dos serviços que a minha mulher dipões em seus atendimentos como Fisioterapeuta, porém a minha ideia para o site era um pouco mais complexa e irei voltar a trabalhar nele futuramente:</p>
+            <article><a href="../Dra.LeticiaV/index.html" target="_blank">Dra.Leticia Vieira</a></article>
             <p>No site seguinte focamos no treino das tags de CSS e na inclusão de Iframes, onde o site é baseado em um layout de celular:</p>
-            <p><a href="../Iframe/Iframe.html" target="_blank">Projeto Redes Sociais</a></p>
+            <article><a href="../Iframe/Iframe.html" target="_blank">Projeto Redes Sociais</a></article>
             <p>Por fim comecei a estudar sobre o Java Scrip e ao finalizar o curso retornei para trabalhar com HTML e CSS e fazer exercicios apenas com o que eu lembro e apenas com a consulta para relembrar o que preencher em alguns comandos, e o resultado foi:</p>
-            <p><a href="../Site/index.html" target="_blank">Minhas Redes Sociais</a></p>
+            <article><a href="../Site/index.html" target="_blank">Minhas Redes Sociais</a></article>
+            <p>Agora irei seguir com os projetos e futuramente volto a adiciona eles aqui.</p>
         </div>
     </section>
     <footer>
