--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1 id="completo">João Vitor Coelho Machado</h1>
         <h1 id="medio">João Vitor Coelho</h1>
         <h1 id="reduzido">João Vitor</h1>
-        <p class="maior"><img id="iconeh" src="imagem/computador.png" alt="computador">ADS - Analise e Desenvolvimento de Sistemas</p>
-        <p><img id="iconeh" src="imagem/JS.png" alt="JS">Java Script</p>
+        <p class="maior"><img id="iconeh" src="imagem/computador.png" alt="computador">ADS - Análise e Desenvolvimento de Sistemas</p>
+        <p><img id="iconeh" src="imagem/JS.png" alt="JS">JavaScript</p>
         <p><img id="iconeh" src="imagem/Html.png" alt="Html">Html</p>
         <p><img id="iconeh" src="imagem/CSS.png" alt="CSS">CSS</p>
         <p class="menor"><img id="iconeh" src="imagem/computador.png" alt="computador">ADS</p>
@@ -24,8 +24,8 @@
 <section>
     <div id="conteudo">
         <h2>Explorando HTML e CSS: Testes e Aprendizado.</h2>
-        <p>Acabo de finzalizar o curso das respectivas ferramentas e Java Script e daqui pra frente irei iniciar uma etapa de estudos sozinho e treinos em pagina teste</p>
-        <p>Está é uma página de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajusta layouts, entre outras habilidades.</p>
+        <p>Acabo de finzalizar o curso das respectivas ferramentas e JavaScript e daqui para frente irei iniciar uma etapa de estudos sozinho e praticando em páginas de teste</p>
+        <p>Está é uma página de teste com o intuito de treinar minhas habilidades em Html e CSS, incluir imagens, links, ajustar layouts, entre outras habilidades.</p>
         <h2>Redes Socias</h2>
         <div id="redes">
                 <p><img id="icone" src="imagem/github.png" alt="Github"><a href="https://github.com/Torrvi" target="_blank">Github</a></p>
@@ -41,9 +41,9 @@
                 <h2>Projetos Atuais</h2>
                 <p>Aqui tem um breve resumo dos meus atuais projetos:<a href="portifolio.html" target="_blank">Portifolio</a></p>
                 <h2>Projetos Futuros</h2>
-                <p>Aprimorar habilidades em JavaScript: React, Vue.js, Node.js, APIs, APIs de terceiros, Projetos práticos.</p>
+                <p>Aprimorar habilidades em JavaScript: React, Vue.js, Node.js, APIs, APIs de terceiros, projetos práticos.</p>
                 <p>Estudar Node.js e Backend: Express, MongoDB ou SQL, Autenticação e Autorização, Projetos de backend.</p>
-                <p>Estudo sobre Desenvolvimento Mobile (Opcional): React Native, PWA (Progressive Web Apps).</p>
+                <p>Estudar desenvolvimento mobile (Opcional): React Native, PWA (Progressive Web Apps).</p>
                 <p>Aprender Python: Sintaxe básica, Django/Flask, Automação, Data Science, Machine Learning</p>
             </div>
     </div>
